# django-launchbox

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  manage.py  pyproject.toml  setup.cfg
launchbox/: __init__.py  apps.py
launchbox/api/: urls.py  utils.py
launchbox/api/views/: __init__.py  users.py
launchbox/env/: __init__.py
launchbox/identity/: __init__.py
launchbox/resources/: __init__.py
