[build-system]
requires = ['setuptools>=60.2.0', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'

[tool.isort]
profile = "black"
#src_paths = ["launchbox"]
known_django = "django"
sections = ["STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = "true"
use_parentheses = "true"
