[metadata]
name = django-launchbox
version = 0.1
description = A plugin for your Django app to assist in integrating with Launchbox.
long_description = file: README.md
url = https://github.com/nasa-jpl/django-launchbox
author = Jet Propulsion Laboratory
author_email = pypi@jpl.nasa.gov
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2

[flake8]
max-line-length = 88
# Ignoring E203 recommended by Black because it is incompatible with PEP 8 enforcement.
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#id1
extend-ignore = E203
per-file-ignores = __init__.py:F401
